--- a/Control panel/ctlpnl-cpp/tarantool-c-master/CMakeLists.txt
+++ b/Control panel/ctlpnl-cpp/tarantool-c-master/CMakeLists.txt
@@ -29,6 +29,7 @@ endif (NOT ENABLE_BUNDLED_MSGPUCK)
 
 # set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -pthread -Wall -Wextra -std=gnu99 -D__USE_XOPEN")
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Wextra -std=gnu99 -D__USE_XOPEN")
+# set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Wextra -std=c++11 -D__USE_XOPEN")
 
 if(NOT CMAKE_BUILD_TYPE)
     set(CMAKE_BUILD_TYPE Debug CACHE STRING
