--- a/Control panel/ctlpnl-cpp/tarantool-c-master(1)/tnt/CMakeLists.txt
+++ b/Control panel/ctlpnl-cpp/tarantool-c-master(1)/tnt/CMakeLists.txt
@@ -42,8 +42,7 @@ set (TNT_SOURCES
      ${CMAKE_SOURCE_DIR}/third_party/sha1.c
      ${CMAKE_SOURCE_DIR}/third_party/base64.c
      ${CMAKE_SOURCE_DIR}/third_party/PMurHash.c
-     ${CMAKE_SOURCE_DIR}/third_party/msgpuck.c
-        ../include/sys/types.h)
+     ${CMAKE_SOURCE_DIR}/third_party/msgpuck.c)
 
 #----------------------------------------------------------------------------#
 # Builds
