--- a/Control panel/ctlpnl-cpp/tarantool-c-master(1)/CMakeLists.txt
+++ b/Control panel/ctlpnl-cpp/tarantool-c-master(1)/CMakeLists.txt
@@ -41,7 +41,7 @@ if("${CMAKE_BUILD_TYPE}" STREQUAL "Debug")
     set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O0 -g3 -ggdb3")
 endif()
 
-add_custom_target (doc COMMAND doxygen ${PROJECT_SOURCE_DIR}/Doxyfile)
+# add_custom_target (doc COMMAND doxygen ${PROJECT_SOURCE_DIR}/Doxyfile)
 
 option(ENABLE_BUNDLED_MSGPUCK "Enable building of the bundled MsgPuck" ON)
 if (ENABLE_BUNDLED_MSGPUCK)
