--- a/Data base/Redis/redis-masdb.conf
+++ b/Data base/Redis/redis-masdb.conf
@@ -147,7 +147,7 @@ supervised no
 #
 # Creating a pid file is best effort: if Redis is not able to create it
 # nothing bad happens, the server will start and run normally.
-pidfile /home/mint/redis-masdb/redis_6353.pid
+pidfile /home/mint/redis_masdb/redis_6353.pid
 
 # Specify the server verbosity level.
 # This can be one of:
@@ -160,7 +160,7 @@ loglevel notice
 # Specify the log file name. Also the empty string can be used to force
 # Redis to log on the standard output. Note that if you use standard
 # output for logging but daemonize, logs will be sent to /dev/null
-logfile /home/mint/redis-masdb/redis_6353.log
+logfile /home/mint/redis_masdb/redis_6353.log
 
 # To enable logging to the system logger, just set 'syslog-enabled' to yes,
 # and optionally update the other syslog parameters to suit your needs.
@@ -477,7 +477,7 @@ slave-priority 100
 # 150k passwords per second against a good box. This means that you should
 # use a very strong password otherwise it will be very easy to break.
 #
-# requirepass foobared
+requirepass fH4^gG^5c&e34g*%FS24@hDa
 
 # Command renaming.
 #
