--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ build-hst-reader-MSVC2015_64bit-Debug/
 build-hst-reader-MinGW_32bit-Debug/
 Market-Analysis/_read bytes.txt
 *.autosave
+build-Market-Analysis-MSVC2015_64bit-Debug/
