- stable io config file;

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ Market-Analysis/_read bytes.txt
 *.autosave
 build-Market-Analysis-MSVC2015_64bit-Debug/
 build-Market-Analysis-MSVC2015_64bit-Release/
+/*.png
