--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ Market-Analysis/_read bytes.txt
 build-Market-Analysis-MSVC2015_64bit-Debug/
 build-Market-Analysis-MSVC2015_64bit-Release/
 /*.png
+kits/
