--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,7 @@
-build-hst-reader-MSVC2015_64bit-Release/
-build-hst-reader-MSVC2015_64bit-Debug/
-build-hst-reader-MinGW_32bit-Debug/
-Market-Analysis/_read bytes.txt
+build-*/
 *.autosave
-build-Market-Analysis-MSVC2015_64bit-Debug/
-build-Market-Analysis-MSVC2015_64bit-Release/
-/*.png
-kits/
-<<<<<<< .merge_file_a08120
-=======
 *.hdf5
 *.model
 *.csv
 *.txt
 *.xlsx
->>>>>>> .merge_file_a06048
